// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits="button"
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "padding": 2,
          },
          Object {
            "borderColor": "#52C5DC",
          },
          Object {
            "borderRadius": 12.5,
            "height": 25,
            "width": 25,
          },
        ]
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "#52C5DC",
            "borderRadius": 100,
            "flex": 1,
            "opacity": 0,
            "transform": Array [
              Object {
                "scale": 0.3,
              },
            ],
          }
        }
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "marginLeft": 5,
            },
            undefined,
          ],
        ]
      }
    >
      Test label
    </Text>
  </View>
</View>
`;

exports[`renders not checked correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits="button"
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "padding": 2,
          },
          null,
          Object {
            "borderRadius": 12.5,
            "height": 25,
            "width": 25,
          },
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "marginLeft": 5,
            },
            undefined,
          ],
        ]
      }
    >
      Test label
    </Text>
  </View>
</View>
`;
